# hoodlum

./: .atom-gdb.json  .gdbinit  .init  Cargo.toml  README.md  log  ref.v  test.sh
examples/: .gitignore
examples/blinky/: Makefile  blinky.hdl  compiled.blif  compiled.ex  compiled.txt  compiled.v  ice.blif
examples/ethernet/: .gitignore  Makefile  ethernet.hdl  ethernet2.hdl  log  out.hdl  out.hdl.ok  out2.hdl  out3.hdl  stack.hdl  test.sh  test.v.ok
examples/fifo/: Makefile  graph.dot  rise_ice.ex2
examples/j1a/: j1a.vdl
examples/lvds/: Makefile  rise_ice.txt
examples/math/: Makefile  math.hdl
examples/neopixels/: Makefile  neopixels.hdl
examples/ntsc/: Makefile  README.md  data.hdl  ntsc.hdl  output.v  rise_ice.blif  rise_ice.ex  rise_ice.txt  test.v  todo.v  video.hdl  video2.hdl  zelda-conv.rs  zelda.hex
examples/rot/: Makefile  compiled.blif  compiled.ex  compiled.txt  compiled.v  rot.hdl
examples/sequence/: Makefile  icestick.pcf  sequence.hdl
language-hoodlum/: README.md  package.json
language-hoodlum/grammars/: hoodlum.cson
language-hoodlum/settings/: hoodlum.cson
parser/: Cargo.toml  README.md  build.rs  update_parser.sh
parser/src/: .gitignore  ast.rs  hdl_parser.lalrpop  hdl_parser.rs  lib.rs
sim/: counter.v  hello
src/: .gitignore  ast.rs  async.rs  fsm.rs  hdl_parser.lalrpop  lib.rs  main.rs  sequence.rs  verilog.rs  walker.rs
test/: Cargo.toml
test/ethernet/: ethernet.hdl
test/rot/: rot.hdl  rot.v
test/src/: main.rs  todo.txt
tests/: compiled.rs  def.rs  integration.rs  match.rs  missing.rs
(+24 files in other folders)
