[package]
name = "hoodlum"
version = "0.2.0"
authors = ["Tim Ryan <id@timryan.org>"]
description = "HDL generation library for hardware synthesis."
license = "MIT"
repository = "https://github.com/tcr/hoodlum.git"
publish = false

[dependencies]
lalrpop-util = "0.11.0"
hoodlum-parser = { path = "./parser" }
regex = "0.1"
