[package]
name = "hoodlum"
version = "0.2.0"
authors = ["Tim Ryan <id@timryan.org>"]
description = "HDL generation library for hardware synthesis."
license = "MIT"
repository = "https://github.com/tcr/hoodlum.git"

[dependencies]
lalrpop-util = "0.11.0"
hoodlum-parser = { path = "./parser", version = "0.2.0" }
regex = "0.1"
itertools = "0.5.4"
matches = "0.1"
