[package]
name = "hoodlum"
version = "0.5.0"
authors = ["Tim Ryan <tim@timryan.org>"]
description = "HDL generation library for hardware synthesis."
license = "MIT"
repository = "https://github.com/tcr/hoodlum.git"

[dependencies]
lalrpop-util = "0.11.0"
hoodlum-parser = { path = "./parser", version = "0.5.0" }
regex = "0.1"
itertools = "0.5.4"
matches = "0.1"
maplit = "0.1.4"
lazy_static = "0.1.*"
clap = { version = "2.19", default-features = false, features = [ "wrap_help", "suggestions"] }

[[bin]]
name = "hoodlum"
doc = false
